--- a/Moriah_Age.html
+++ b/Moriah_Age.html
@@ -69,7 +69,7 @@ path.arc {
   </head>
   <body>
     <h2>
-      Mindfulness 
+      Human Fetal Brain Connectivity (n=104) 
     </h2>
 	<h3 name="componentnum">
 	Component
@@ -78,22 +78,23 @@ path.arc {
 	<!--tension: <input style="position:relative;top:3px;" type="range" min="0" max="100" value="85"><br/>-->
 	
 	Component:
-	<input type="radio" name="component" value="01" onclick="updateData()" autocomplete="off">1 
-	<input type="radio" name="component" value="02" onclick="updateData()" autocomplete="off">2 <br/>
+	<input type="radio" name="component" value="01" onclick="updateData()" autocomplete="off">Intercept 
+	<input type="radio" name="component" value="02" onclick="updateData()" autocomplete="off">Linear
+	<input type="radio" name="component" value="03" onclick="updateData()" autocomplete="off">Quadratic<br/>
 	
 	Hide Networks:
-	<input type="checkbox" name="network" value="1" onclick="updateData()" autocomplete="off">1
-	<input type="checkbox" name="network" value="2" onclick="updateData()" autocomplete="off">2
-	<input type="checkbox" name="network" value="3" onclick="updateData()" autocomplete="off">3
-	<input type="checkbox" name="network" value="4" onclick="updateData()" autocomplete="off">4
-	<input type="checkbox" name="network" value="5" onclick="updateData()" autocomplete="off">5
-	<input type="checkbox" name="network" value="6" onclick="updateData()" autocomplete="off">6
-	<input type="checkbox" name="network" value="7" onclick="updateData()" autocomplete="off">7
-	<input type="checkbox" name="network" value="8" onclick="updateData()" autocomplete="off">8 <br/>
+	<input type="checkbox" name="network" value="1" onclick="updateData()" autocomplete="off">F
+	<input type="checkbox" name="network" value="2" onclick="updateData()" autocomplete="off">FP
+	<input type="checkbox" name="network" value="3" onclick="updateData()" autocomplete="off">P
+	<input type="checkbox" name="network" value="4" onclick="updateData()" autocomplete="off">I
+	<input type="checkbox" name="network" value="5" onclick="updateData()" autocomplete="off">Te
+	<input type="checkbox" name="network" value="6" onclick="updateData()" autocomplete="off">Th
+	<input type="checkbox" name="network" value="7" onclick="updateData()" autocomplete="off">O
+	<input type="checkbox" name="network" value="8" onclick="updateData()" autocomplete="off">C <br/>
 	
-	<input type="checkbox" name="flip" value="-1" onclick="updateData()" autocomplete="off">Flip sign?
+	<input type="checkbox" name="flip" value="-1" onclick="updateData()" autocomplete="off">Flip sign
 	<br/>
-	<input type="checkbox" name="removenetworks" value="-1" onclick="updateData()" autocomplete="off">Remove Network Names?
+	<input type="checkbox" name="removenetworks" value="-1" onclick="updateData()" autocomplete="off">Remove Network Names
 	<br/>
 	
 	</div>
