--- a/Moriah_Age.html
+++ b/Moriah_Age.html
@@ -78,7 +78,7 @@ path.arc {
 	<!--tension: <input style="position:relative;top:3px;" type="range" min="0" max="100" value="85"><br/>-->
 	
 	Component:
-	<input type="radio" name="component" value="01" onclick="updateData()" autocomplete="off">Intercept 
+	<input type="radio" name="component" checked="checked" value="01" onclick="updateData()" autocomplete="off">Intercept 
 	<input type="radio" name="component" value="02" onclick="updateData()" autocomplete="off">Linear
 	<input type="radio" name="component" value="03" onclick="updateData()" autocomplete="off">Quadratic<br/>
 	
