remove floating component title

--- a/Moriah_Age.html
+++ b/Moriah_Age.html
@@ -238,7 +238,7 @@ function updateData() {
 	}
 	
 	filename = "Moriah_Age/ageb_" + componentnum + "_1_2_3_4_5_6_7_8.json";
-	document.getElementsByName('componentnum')[0].innerHTML = "Component " + componentnum;
+//	document.getElementsByName('componentnum')[0].innerHTML = "Component " + componentnum;
 	//window.alert(filename);
 	svg.selectAll("path.link").remove();
 	svg.selectAll("g.node").remove();
