--- a/Moriah_Age.html
+++ b/Moriah_Age.html
@@ -72,7 +72,7 @@ path.arc {
       Human Fetal Brain Connectivity (n=104) 
     </h2>
 	<h3 name="componentnum">
-	Component
+//	Component
 	</h3>
     <div style="position:absolute;top:0;right:0;font-size:18px;">
 	<!--tension: <input style="position:relative;top:3px;" type="range" min="0" max="100" value="85"><br/>-->
