--- a/SCP_Task_Rest.html
+++ b/SCP_Task_Rest.html
@@ -108,6 +108,13 @@ path.arc {
 	<input type="checkbox" name="removenetworks" value="-1" onclick="updateData()" autocomplete="off">Remove Network Names?
 	<br/>
 	
+	<select id="threshold" onchange="updateData()">
+		<option value=3>3</option>
+		<option value=4>4</option>
+		<option value=5>5</option>
+	</select>
+	<br/>
+	
 	</div>
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="d3/d3.layout.js"></script>
@@ -190,12 +197,16 @@ function updateData() {
 	}
 	
 	var flipbox = document.getElementsByName('flip');
+
 	if (flipbox[0].checked) {
 		flip = -1;
-	} else if (flip==-1) {
-		//flipbox[0].checked = true;
+	} else {
+		flip = 1;
 	}
 	
+	if (flip==-1) {
+		flipbox[0].checked = true;
+	}	
 	if (flip==1) {
 		mystylesheet.deleteRule(1);
 		mystylesheet.deleteRule(0);
@@ -226,15 +237,17 @@ function updateData() {
 	}
 	
 	var radios = document.getElementsByName('component');
-	idx = parseInt(componentnum) - 1;
-	radios[idx].checked = true;
-	
+
 	for (var i = 0, length = radios.length; i < length; i++) {
 		if (radios[i].checked) {
 			componentnum = radios[i].value;
 			break;
 		}
-	}
+	}	
+	
+	idx = parseInt(componentnum) - 1;
+	radios[idx].checked = true;
+	
 	var checks = document.getElementsByName('network');
 	for (var i = 0, length = checks.length; i < length; i++) {
 		if (checks[i].checked) {
@@ -248,7 +261,10 @@ function updateData() {
 		checks[idx].checked = true;
 	}
 	
-	filename = "SCP_Task_Rest/Comp" + componentnum + "_1_4_1_2_3_4_5_6_7.json";
+	var thresh = document.getElementById('threshold');
+	var threshold = thresh.value;
+	
+	filename = "SCP_Task_Rest/Comp" + componentnum + "_1_" + threshold + "_1_2_3_4_5_6_7.json";
 	document.getElementsByName('componentnum')[0].innerHTML = "Component " + componentnum;
 	//window.alert(filename);
 	svg.selectAll("path.link").remove();
