--- a/CAAD_new.html
+++ b/CAAD_new.html
@@ -246,7 +246,7 @@ function updateData() {
 	}
 	
 	var thresh = document.getElementById('threshold');
-	var threshold = thresh.value;
+	var threshold = 3;
 	
 	filename = "CAAD_new/Comp" + componentnum + "_1_3_1_2_3_4_5_6_7.json";
 	document.getElementsByName('componentnum')[0].innerHTML = "Component " + componentname;
