--- a/ABCD_Rest.html
+++ b/ABCD_Rest.html
@@ -84,13 +84,23 @@ path.arc {
 	<br/>
 	
 	Hide Networks:
-	<input type="checkbox" name="network" value="1" onclick="updateData()" autocomplete="off">VN
-	<input type="checkbox" name="network" value="2" onclick="updateData()" autocomplete="off">SMN
-	<input type="checkbox" name="network" value="3" onclick="updateData()" autocomplete="off">DAN
-	<input type="checkbox" name="network" value="4" onclick="updateData()" autocomplete="off">VAN
-	<input type="checkbox" name="network" value="5" onclick="updateData()" autocomplete="off">LN
-	<input type="checkbox" name="network" value="6" onclick="updateData()" autocomplete="off">FPN
-	<input type="checkbox" name="network" value="7" onclick="updateData()" autocomplete="off">DMN <br/>
+	<input type="checkbox" name="network" value="1" onclick="updateData()" autocomplete="off">SMN Hand
+	<input type="checkbox" name="network" value="2" onclick="updateData()" autocomplete="off">SMN Face
+	<input type="checkbox" name="network" value="3" onclick="updateData()" autocomplete="off">CingOper
+	<input type="checkbox" name="network" value="4" onclick="updateData()" autocomplete="off">Aud
+	<input type="checkbox" name="network" value="5" onclick="updateData()" autocomplete="off">DMN
+	<input type="checkbox" name="network" value="6" onclick="updateData()" autocomplete="off">Memory
+	<input type="checkbox" name="network" value="7" onclick="updateData()" autocomplete="off">Vis
+	<input type="checkbox" name="network" value="8" onclick="updateData()" autocomplete="off">FPN
+	<input type="checkbox" name="network" value="9" onclick="updateData()" autocomplete="off">SAL
+	<input type="checkbox" name="network" value="10" onclick="updateData()" autocomplete="off">Sub
+	<input type="checkbox" name="network" value="11" onclick="updateData()" autocomplete="off">VAN
+	<input type="checkbox" name="network" value="12" onclick="updateData()" autocomplete="off">DAN
+	<input type="checkbox" name="network" value="13" onclick="updateData()" autocomplete="off">CERE 
+	<input type="checkbox" name="network" value="14" onclick="updateData()" autocomplete="off">CERE 
+	
+	
+	<br/>
 	
 	<input type="checkbox" name="flip" value="-1" onclick="updateData()" autocomplete="off">Flip sign?
 	<br/>
@@ -250,7 +260,7 @@ function updateData() {
 	var thresh = document.getElementById('threshold');
 	var threshold = 3;
 	
-	filename = "ABCD_Rest/PC" + componentnum + "_1_2_3_4_5_6_7.json";
+	filename = "ABCD_Rest/powerPC" + componentnum + "_1_2_3_4_5_6_7_8_9_10_11_12_13_14.json";
 	document.getElementsByName('componentnum')[0].innerHTML = "Component " + componentname;
 	//window.alert(filename);
 	svg.selectAll("path.link").remove();
