updated colors and layout

--- a/ABCD_Rest.html
+++ b/ABCD_Rest.html
@@ -89,6 +89,7 @@ path.arc {
 	<input type="checkbox" name="network" value="3" onclick="updateData()" autocomplete="off">CingOper
 	<input type="checkbox" name="network" value="4" onclick="updateData()" autocomplete="off">Aud
 	<input type="checkbox" name="network" value="5" onclick="updateData()" autocomplete="off">DMN
+	<br/>
 	<input type="checkbox" name="network" value="6" onclick="updateData()" autocomplete="off">Memory
 	<input type="checkbox" name="network" value="7" onclick="updateData()" autocomplete="off">Vis
 	<input type="checkbox" name="network" value="8" onclick="updateData()" autocomplete="off">FPN
@@ -97,9 +98,9 @@ path.arc {
 	<input type="checkbox" name="network" value="11" onclick="updateData()" autocomplete="off">VAN
 	<input type="checkbox" name="network" value="12" onclick="updateData()" autocomplete="off">DAN
 	<input type="checkbox" name="network" value="13" onclick="updateData()" autocomplete="off">CERE 
-	<input type="checkbox" name="network" value="14" onclick="updateData()" autocomplete="off">CERE 
+	<input type="checkbox" name="network" value="14" onclick="updateData()" autocomplete="off">Uncertain
 	
-	
+	<br/>
 	<br/>
 	
 	<input type="checkbox" name="flip" value="-1" onclick="updateData()" autocomplete="off">Flip sign?
