--- a/ABCD_Rest_PF10.html
+++ b/ABCD_Rest_PF10.html
@@ -69,7 +69,7 @@ path.arc {
   </head>
   <body>
     <h2>
-      ABCD PC prediction Consensus
+      ABCD PF10 PC prediction Consensus
     </h2>
 	<h3 name="componentnum">
 	PC1
