--- a/ABCD_Rest_PF10_2.html
+++ b/ABCD_Rest_PF10_2.html
@@ -77,8 +77,10 @@ path.arc {
     <div style="position:absolute;top:0;right:0;font-size:18px;">
 	<!--tension: <input style="position:relative;top:3px;" type="range" min="0" max="100" value="85"><br/>-->
 	
-	Component:
-	<input type="radio" name="component" value="01" onclick="updateData()" autocomplete="off" placeholder="01">01 
+	PC:
+	<input type="radio" name="component" value="1" onclick="updateData()" autocomplete="off" placeholder="1">PC1 
+	<input type="radio" name="component" value="2" onclick="updateData()" autocomplete="off" placeholder="2">PC2 
+	<input type="radio" name="component" value="3" onclick="updateData()" autocomplete="off" placeholder="3">PC3
 	<br/>
 	
 	Hide Networks:
