--- a/ABCD_Rest_PF10_2.html
+++ b/ABCD_Rest_PF10_2.html
@@ -84,13 +84,21 @@ path.arc {
 	<br/>
 	
 	Hide Networks:
-	<input type="checkbox" name="network" value="1" onclick="updateData()" autocomplete="off">VN
-	<input type="checkbox" name="network" value="2" onclick="updateData()" autocomplete="off">SMN
-	<input type="checkbox" name="network" value="3" onclick="updateData()" autocomplete="off">DAN
+	<input type="checkbox" name="network" value="1" onclick="updateData()" autocomplete="off">FPN
+	<input type="checkbox" name="network" value="2" onclick="updateData()" autocomplete="off">SAL
+	<input type="checkbox" name="network" value="3" onclick="updateData()" autocomplete="off">CingOper
 	<input type="checkbox" name="network" value="4" onclick="updateData()" autocomplete="off">VAN
-	<input type="checkbox" name="network" value="5" onclick="updateData()" autocomplete="off">LN
-	<input type="checkbox" name="network" value="6" onclick="updateData()" autocomplete="off">FPN
-	<input type="checkbox" name="network" value="7" onclick="updateData()" autocomplete="off">DMN <br/>
+	<input type="checkbox" name="network" value="5" onclick="updateData()" autocomplete="off">DAN
+	<input type="checkbox" name="network" value="6" onclick="updateData()" autocomplete="off">DMN
+	<input type="checkbox" name="network" value="7" onclick="updateData()" autocomplete="off">MemRet
+	<br/>
+	<input type="checkbox" name="network" value="8" onclick="updateData()" autocomplete="off">Aud
+	<input type="checkbox" name="network" value="9" onclick="updateData()" autocomplete="off">SMN Hand
+	<input type="checkbox" name="network" value="10" onclick="updateData()" autocomplete="off">SMN Face
+	<input type="checkbox" name="network" value="11" onclick="updateData()" autocomplete="off">Vis
+	<input type="checkbox" name="network" value="12" onclick="updateData()" autocomplete="off">Sub
+	<input type="checkbox" name="network" value="13" onclick="updateData()" autocomplete="off">CERE 
+	<input type="checkbox" name="network" value="14" onclick="updateData()" autocomplete="off">Uncertain
 	
 	<input type="checkbox" name="flip" value="-1" onclick="updateData()" autocomplete="off">Flip sign?
 	<br/>
