--- a/ABCD_Rest_PF10_2.html
+++ b/ABCD_Rest_PF10_2.html
@@ -69,10 +69,13 @@ path.arc {
   </head>
   <body>
     <h2>
-      CAAD GADvHCN44
+      ABCD PF10 PC prediction Consensus
     </h2>
 	<h3 name="componentnum">
-	Group Results
+	PC1
+	</h3>
+	<h3 name="nodeid">
+	temp
 	</h3>
     <div style="position:absolute;top:0;right:0;font-size:18px;">
 	<!--tension: <input style="position:relative;top:3px;" type="range" min="0" max="100" value="85"><br/>-->
@@ -100,9 +103,14 @@ path.arc {
 	<input type="checkbox" name="network" value="13" onclick="updateData()" autocomplete="off">CERE 
 	<input type="checkbox" name="network" value="14" onclick="updateData()" autocomplete="off">Uncertain
 	
+	<br/>
+	<br/>
+	
 	<input type="checkbox" name="flip" value="-1" onclick="updateData()" autocomplete="off">Flip sign?
 	<br/>
 	<input type="checkbox" name="removenetworks" value="-1" onclick="updateData()" autocomplete="off">Remove Network Names?
+	<br/>
+	<input type="checkbox" name="removeintra" value="-1" onclick="updateData()" autocomplete="off">Remove Intranetwork?
 	<br/>
 	
 	<br/>
@@ -129,9 +137,10 @@ var loffset=0,
 	noffset=0,
 	flip=1,
 	removenetworks=1,
-	skipnets = ["12"],
-	skipsubnets = ["709","710"];
-
+	skipnets = [],
+	skipsubnets = [],
+	removeintra=1;
+	
 var splines = [];
 
 var cluster = d3.layout.cluster()
@@ -143,7 +152,7 @@ var bundle = d3.layout.bundle();
 
 var line = d3.svg.line.radial()
     .interpolate("bundle")
-    .tension(.85)
+    .tension(.7)
     .radius(function(d) { return d.y; })
     .angle(function(d) { return d.x / 180 * Math.PI; });
 
@@ -178,7 +187,7 @@ mystylesheet = document.styleSheets[2];
 
 mystylesheet.insertRule(".color-pos { stroke: #FF0000; opacity: 0.5; }",0);
 mystylesheet.insertRule(".color-neg { stroke: #0000FF; opacity: 0.5; }",1);
-mystylesheet.insertRule(".fade {opacity: 0.1;}",2);
+mystylesheet.insertRule(".fade {opacity: 0.5;}",2);
 
 function updateData() {
 	if (get("removenetworks")!=null) {
@@ -194,6 +203,17 @@ function updateData() {
 		flip = -1;
 	} else {
 		flip = 1;
+	}
+	
+	var intrabox = document.getElementsByName('removeintra');
+	if (intrabox[0].checked) {
+		removeintra = -1;
+	} else {
+		removeintra = 1;
+	}
+	
+	if (removeintra==-1) {
+		intrabox[0].checked = true;
 	}
 	
 	if (flip==-1) {
@@ -260,13 +280,13 @@ function updateData() {
 	
 	filename = "ABCD_Rest_PF10/PF10subpowerpowerPC" + componentnum + "_1_2_3_4_5_6_7_8_9_10_11_12_13_14_15_16_17_18_19_20_21_22_23_24_25_26_27_28.json";
 	document.getElementsByName('componentnum')[0].innerHTML = "Component " + componentname;
-	//window.alert(filename); 
+	//window.alert(filename);
 	svg.selectAll("path.link").remove();
 	svg.selectAll("g.node").remove();
 	
 	d3.json(filename, function(classes) {
 	  var nodes = cluster.nodes(packages.root(classes,skipnets,skipsubnets,removenetworks)),
-		  links = packages.imports(nodes),
+		  links = packages.imports(nodes,removeintra),
 		  splines = bundle(links);
 
 	  var path = svg.selectAll("path.link")
@@ -287,8 +307,11 @@ function updateData() {
 	   .append("svg:circle")
 	      .attr("r",5)
 	      .attr("fill",function(d) { return d.color;})
-			.on("mouseover", mouseover)
-	        .on("mouseout", mouseout);
+			//.on("mouseover", mouseover)
+	        //.on("mouseout", mouseout)
+			.on("mouseover",mouseovertext)
+			.on("mouseout",mouseouttext)
+			.on("click",click);
 		  
 		  nodes
 	   .append("svg:text")
@@ -375,6 +398,24 @@ function mouseout(d) {
   svg.selectAll("path.link.targetsubnet-" + d.subnet)
       .classed("target", false);
       //.each(updateNodes("source", false));
+}
+
+function mouseovertext(d) {
+	document.getElementsByName('nodeid')[0].innerHTML = "node " + d.key;	
+}
+
+function mouseouttext(d) {
+	document.getElementsByName('nodeid')[0].innerHTML = "node ";
+}
+	
+function click(d) {
+	svg.selectAll("path.link")
+		.classed("fade",true);
+	svg.selectAll("path.link.target-" + d.key)
+		.classed("target", true);	
+	svg.selectAll("path.link.source-" + d.key)
+		.classed("source", true);
+		
 }
 
 function updateNodes(name, value) {
