--- a/VoxelwiseDMN.html
+++ b/VoxelwiseDMN.html
@@ -97,7 +97,7 @@ path.arc {
 	</div>
     <script type="text/javascript" src="d3/d3.js"></script>
     <script type="text/javascript" src="d3/d3.layout.js"></script>
-    <script type="text/javascript" src="js/packages.js"></script>
+    <script type="text/javascript" src="packages.js"></script>
 	
     <script type="text/javascript">
 
