--- a/YouthMegaSample_Age_orig.html
+++ b/YouthMegaSample_Age_orig.html
@@ -277,7 +277,7 @@ function updateData() {
 	var thresh = document.getElementById('threshold');
 	var threshold = 3;
 	
-	filename = "YouthMegaSample/origFPCA_PC" + componentnum + "_1_2_3_4_5_6_7_8_9_10_11_12_13_14_15_16_17_18_19_20_21_22_23_24_25_26_27_28.json";
+	filename = "YouthMegaSample/origFPCA_PC" + componentnum + "_1_2_3_4_5_6_7.json";
 	document.getElementsByName('componentnum')[0].innerHTML = "Component " + componentname;
 	//window.alert(filename);
 	svg.selectAll("path.link").remove();
