--- a/SooEunLogReg.html
+++ b/SooEunLogReg.html
@@ -80,7 +80,8 @@ path.arc {
     <div style="position:absolute;top:0;right:0;font-size:18px;">
 	<!--tension: <input style="position:relative;top:3px;" type="range" min="0" max="100" value="85"><br/>-->
 	
-	PC:
+	PC
+	<input type="radio" name="component" value="1" onclick="updateData()" autocomplete="off" placeholder="1">PC01
 	<input type="radio" name="component" value="2" onclick="updateData()" autocomplete="off" placeholder="2">PC02
 	<br/>
 	
